--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 </head>
 <body>
     <nav id="topmenu">
-        (
         <ul>
             <li><a href="#">Къщичка</a></li>
             <li><a href="#">Замръзнали клипове</a></li>
@@ -15,6 +14,6 @@
             <li><a href="#">За шпиониране</a></li>
         </ul>
     </nav>
-
+    <h1>Header test</h1>
 </body>
 </html>
