--- a/index.html
+++ b/index.html
@@ -7,13 +7,56 @@
 </head>
 <body>
     <nav id="topmenu">
+        <div class="container">
         <ul>
-            <li><a href="#">Къщичка</a></li>
+            <li><a href="#">Наш дом</a></li>
             <li><a href="#">Замръзнали клипове</a></li>
             <li><a href="#">Движещи се картинки</a></li>
             <li><a href="#">За шпиониране</a></li>
         </ul>
+        </div>
     </nav>
-    <h1>Header test</h1>
+    <section id="title_section">
+        <h1>Добре дошли на страницата на типичния български програмист!</h1>
+    </section>
+    <section class="slideshow">
+        <article>
+            <div class="slideshow-container">
+
+                <div class="mySlides fade">
+                    <!--<div class="numbertext">1 / 4</div>-->
+                    <img src="img/16388016_662796173927019_1349413188344119365_n.jpg" style="width:100%;height: 50%">
+                    <!--<div class="text">Caption Text</div>-->
+                </div>
+
+                <div class="mySlides fade">
+                    <!--<div class="numbertext">2 / 4</div>-->
+                    <img src="img/16105876_655574851315818_2242256575756342705_n.jpg" style="width:100%;height: 50%">
+                    <!--<div class="text">Caption Two</div>-->
+                </div>
+
+                <div class="mySlides fade">
+                    <!--<div class="numbertext">3 / 4</div>-->
+                    <img src="img/16427387_661978244008812_5582338296541746531_n.jpg" style="width:100%;height: 50%">
+                    <!--<div class="text">Caption Three</div>-->
+                </div>
+
+                <div class="mySlides fade">
+                    <!--<div class="numbertext">4 / 4</div>-->
+                    <img src="img/16298648_662936110579692_1112081521719174362_n.jpg" style="width:100%;height: 50%">
+                    <!--<div class="text">Caption Three</div>-->
+                </div>
+
+            </div>
+            <br>
+            <div style="text-align:center">
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+            </div>
+        </article>
+    </section>
+<script rel="script" src="js/slideshow.js"></script>
 </body>
 </html>
