Added background image. Must fix opacity somehow.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link type="text/css" rel="stylesheet" href="style.css">
 </head>
 <body>
+<div class="page_container">
+    <img src="img/hacker.gif" id="background">
     <nav id="topmenu">
         <div class="container">
         <ul>
@@ -58,5 +60,6 @@
         </article>
     </section>
 <script rel="script" src="js/slideshow.js"></script>
+</div>
 </body>
 </html>
