--- a/index.html
+++ b/index.html
@@ -7,122 +7,9 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" type="text/css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
     <link type="text/css" rel="stylesheet" href="style.css">
-    <style media="screen">
-
-
-        .container {
-            width: 210px;
-            height: 140px;
-            position: relative;
-            margin: 0 auto 40px;
-            /*border: 1px solid #CCC;*/
-            -webkit-perspective: 1100px;
-            -moz-perspective: 1100px;
-            -o-perspective: 1100px;
-            perspective: 1100px;
-            text-align: center;
-        }
-
-        #carousel {
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            -webkit-transform: translateZ( -288px );
-            -moz-transform: translateZ( -288px );
-            -o-transform: translateZ( -288px );
-            transform: translateZ( -288px );
-            -webkit-transform-style: preserve-3d;
-            -moz-transform-style: preserve-3d;
-            -o-transform-style: preserve-3d;
-            transform-style: preserve-3d;
-            -webkit-transition: -webkit-transform 1s;
-            -moz-transition: -moz-transform 1s;
-            -o-transition: -o-transform 1s;
-            transition: transform 1s;
-        }
-
-        #carousel figure {
-            display: block;
-            position: absolute;
-            width: 186px;
-            height: 116px;
-            left: 10px;
-            top: 10px;
-            border: 2px solid black;
-            line-height: 116px;
-            font-size: 80px;
-            font-weight: bold;
-            color: white;
-            text-align: center;
-        }
-
-        #carousel figure:nth-child(1) { background: url("img/headerlogo.jpg"); opacity: 0.8 }
-        #carousel figure:nth-child(2) { background: url("img/headerlogo.jpg"); opacity: 0.8 }
-        #carousel figure:nth-child(3) { background: url("img/headerlogo.jpg"); opacity: 0.8 }
-        #carousel figure:nth-child(4) { background: url("img/headerlogo.jpg"); opacity: 0.8 }
-        #carousel figure:nth-child(5) { background: url("img/headerlogo.jpg"); opacity: 0.8 }
-        #carousel figure:nth-child(6) { background: url("img/headerlogo.jpg"); opacity: 0.8 }
-        #carousel figure:nth-child(7) { background: url("img/headerlogo.jpg"); opacity: 0.8 }
-        #carousel figure:nth-child(8) { background: url("img/headerlogo.jpg"); opacity: 0.8 }
-        #carousel figure:nth-child(9) { background: url("img/headerlogo.jpg"); opacity: 0.8 }
-
-        #carousel figure:nth-child(1) {
-            -webkit-transform: rotateY(   0deg ) translateZ( 288px );
-            -moz-transform: rotateY(   0deg ) translateZ( 288px );
-            -o-transform: rotateY(   0deg ) translateZ( 288px );
-            transform: rotateY(   0deg ) translateZ( 288px );
-        }
-        #carousel figure:nth-child(2) {
-            -webkit-transform: rotateY(  40deg ) translateZ( 288px );
-            -moz-transform: rotateY(  40deg ) translateZ( 288px );
-            -o-transform: rotateY(  40deg ) translateZ( 288px );
-            transform: rotateY(  40deg ) translateZ( 288px );
-        }
-        #carousel figure:nth-child(3) {
-            -webkit-transform: rotateY(  80deg ) translateZ( 288px );
-            -moz-transform: rotateY(  80deg ) translateZ( 288px );
-            -o-transform: rotateY(  80deg ) translateZ( 288px );
-            transform: rotateY(  80deg ) translateZ( 288px );
-        }
-        #carousel figure:nth-child(4) {
-            -webkit-transform: rotateY( 120deg ) translateZ( 288px );
-            -moz-transform: rotateY( 120deg ) translateZ( 288px );
-            -o-transform: rotateY( 120deg ) translateZ( 288px );
-            transform: rotateY( 120deg ) translateZ( 288px );
-        }
-        #carousel figure:nth-child(5) {
-            -webkit-transform: rotateY( 160deg ) translateZ( 288px );
-            -moz-transform: rotateY( 160deg ) translateZ( 288px );
-            -o-transform: rotateY( 160deg ) translateZ( 288px );
-            transform: rotateY( 160deg ) translateZ( 288px );
-        }
-        #carousel figure:nth-child(6) {
-            -webkit-transform: rotateY( 200deg ) translateZ( 288px );
-            -moz-transform: rotateY( 200deg ) translateZ( 288px );
-            -o-transform: rotateY( 200deg ) translateZ( 288px );
-            transform: rotateY( 200deg ) translateZ( 288px );
-        }
-        #carousel figure:nth-child(7) {
-            -webkit-transform: rotateY( 240deg ) translateZ( 288px );
-            -moz-transform: rotateY( 240deg ) translateZ( 288px );
-            -o-transform: rotateY( 240deg ) translateZ( 288px );
-            transform: rotateY( 240deg ) translateZ( 288px );
-        }
-        #carousel figure:nth-child(8) {
-            -webkit-transform: rotateY( 280deg ) translateZ( 288px );
-            -moz-transform: rotateY( 280deg ) translateZ( 288px );
-            -o-transform: rotateY( 280deg ) translateZ( 288px );
-            transform: rotateY( 280deg ) translateZ( 288px );
-        }
-        #carousel figure:nth-child(9) {
-            -webkit-transform: rotateY( 320deg ) translateZ( 288px );
-            -moz-transform: rotateY( 320deg ) translateZ( 288px );
-            -o-transform: rotateY( 320deg ) translateZ( 288px );
-            transform: rotateY( 320deg ) translateZ( 288px );
-        }
-
-
-    </style>
+    <script src="js/utils.js"></script>
+    <!--<script rel="script" src="js/slideshow.js"></script>-->
+    <script src="js/carousel.js"></script>
 </head>
 <body>
 <main class="page-main">
@@ -232,32 +119,6 @@
 </nav>
 </footer>
 
-<script src="js/utils.js"></script>
-<!--<script rel="script" src="js/slideshow.js"></script>-->
-<script>
-
-    var init = function() {
-        var carousel = document.getElementById('carousel'),
-            navButtons = document.querySelectorAll('#navigation button'),
-            panelCount = carousel.children.length,
-            transformProp = Modernizr.prefixed('transform'),
-            theta = 0,
-
-            onNavButtonClick = function( event ){
-                var increment = parseInt( event.target.getAttribute('data-increment') );
-                theta += ( 360 / panelCount ) * increment * -1;
-                carousel.style[ transformProp ] = 'translateZ( -288px ) rotateY(' + theta + 'deg)';
-            };
-
-        for (var i=0; i < 2; i++) {
-            navButtons[i].addEventListener( 'click', onNavButtonClick, false);
-        }
-
-    };
-
-    window.addEventListener( 'DOMContentLoaded', init, false);
-
-</script>
 
 </body>
 </html>
