--- a/index.html
+++ b/index.html
@@ -2,17 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Добре дошли</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" type="text/css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
     <link type="text/css" rel="stylesheet" href="style.css">
-    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
-    <script src="js/utils.js"></script>
     <!--<script rel="script" src="js/slideshow.js"></script>-->
-    <script src="js/carousel.js"></script>
-    <script type="text/javascript" src="slick/slick.min.js"></script>
+    <!--<script src="js/carousel.js"></script>-->
 
 </head>
 <body>
@@ -30,6 +26,10 @@
         <h1>добре дошли в softuni</h1>
         <h3>университетът за типични програмисти</h3>
     </section>
+    <div class="slider-for">
+
+    </div>
+
 
     <div class="fuck-carousel">
         <section class="typical-programmers">
@@ -54,6 +54,30 @@
                 </p>
             </div>
         </section>
+
+        <script src="js/utils.js"></script>
+        <script>
+            var init = function() {
+                var carousel = document.getElementById('carousel'),
+                    navButtons = document.querySelectorAll('#navigation button'),
+                    panelCount = carousel.children.length,
+                    transformProp = Modernizr.prefixed('transform'),
+                    theta = 0,
+
+                    onNavButtonClick = function( event ){
+                        var increment = parseInt( event.target.getAttribute('data-increment') );
+                        theta += ( 360 / panelCount ) * increment * -1;
+                        carousel.style[ transformProp ] = 'translateZ( -288px ) rotateY(' + theta + 'deg)';
+                    };
+
+                for (var i=0; i < 2; i++) {
+                    navButtons[i].addEventListener( 'click', onNavButtonClick, false);
+                }
+
+            };
+
+            window.addEventListener( 'DOMContentLoaded', init, false);
+        </script>
     </div>
     <section class="testim">
         <h1>Няколко думи от наши студенти</h1>
@@ -73,7 +97,7 @@
             </article>
             <article class="left-testimonial">
                 <img src="img/turing.jpg"><p>Само благодарение на знанията, които придобих в Софтуни, успях да направя машината, с която
-                разказахме играта на германците. Ако го нямаше Developing Fundamentials курса, сега щяхме да спрехваме зидойча по цял ден.
+                разказахме играта на германците. Ако го нямаше Developing Fundamentals курса, сега щяхме да спрехваме зидойча по цял ден.
             </p>
                 <p class="testimonial-name">-Алън Тюринг</p>
             </article>
@@ -122,25 +146,6 @@
 </ul>
 </nav>
 </footer>
-<script type="text/javascript">
-    $(document).ready(function(){
-        $('.slider-for').slick({
-            slidesToShow: 1,
-            slidesToScroll: 1,
-            arrows: false,
-            fade: true,
-            asNavFor: '.slider-nav'
-    });
-        $('.slider-nav').slick({
-            slidesToShow: 3,
-            slidesToScroll: 1,
-            asNavFor: '.slider-for',
-            dots: true,
-            centerMode: true,
-            focusOnSelect: true
-    });
-    });
-</script>
 
 </body>
 </html>
