Adjusted media queries and some content.

--- a/images.html
+++ b/images.html
@@ -20,51 +20,55 @@
         </ul>
     </nav>
     <section class="images-section">
-        <article><img src="img/15966097_653101661563137_9021394244376670375_n.jpg"> </article>
-        <article><img src="img/16105640_653240314882605_7080539256440944534_n.jpg"></article>
-        <article><img src="img/16105876_655574851315818_2242256575756342705_n.jpg"></article>
-        <article><img src="img/16195675_658372847702685_5282484527812415002_n.jpg"></article>
-        <article><img src="img/16002987_654907051382598_3282053423106411984_n.jpg"></article>
-        <article><img src="img/16114037_655380288001941_48838798950303350_n.jpg"></article>
-        <article><img src="img/16174752_655896107950359_3300504296755915136_n.jpg"></article>
-        <article><img src="img/16298648_662936110579692_1112081521719174362_n.jpg"></article>
-        <article><img src="img/16299449_659971497542820_4033603688312240238_n.jpg"></article>
+        <h2>Типичните програмисти</h2>
+        <div class="images-container">
+            <article><img src="img/15966097_653101661563137_9021394244376670375_n.jpg"></article>
+            <article><img src="img/16105640_653240314882605_7080539256440944534_n.jpg"></article>
+            <article><img src="img/16105876_655574851315818_2242256575756342705_n.jpg"></article>
+            <article><img src="img/16195675_658372847702685_5282484527812415002_n.jpg"></article>
+            <article><img src="img/16002987_654907051382598_3282053423106411984_n.jpg"></article>
+            <article><img src="img/16114037_655380288001941_48838798950303350_n.jpg"></article>
+            <article><img src="img/16174752_655896107950359_3300504296755915136_n.jpg"></article>
+            <article><img src="img/16298648_662936110579692_1112081521719174362_n.jpg"></article>
+            <article><img src="img/16299449_659971497542820_4033603688312240238_n.jpg"></article>
+        </div>
     </section>
 </main>
 <footer>
-    <p>Свържете се с нас</p><nav><ul class="social">
-    <li>
-        <a href="https://www.facebook.com/SoftwareUniversity" target="_blank" class="icon-btn">
-            <span class="fa fa-facebook"></span>
-        </a>
-    </li>
-    <li>
-        <a href="https://twitter.com/softunibg" target="_blank" class="icon-btn">
-            <span class="fa fa-twitter"></span>
-        </a>
-    </li>
-    <li>
-        <a href="https://plus.google.com/+SoftuniBg" target="_blank" class="icon-btn">
-            <span class="fa fa-google-plus"></span>
-        </a>
-    </li>
-    <li>
-        <a href="https://www.youtube.com/user/softwareuniversity" target="_blank" class="icon-btn">
-            <span class="fa fa-youtube-play"></span>
-        </a>
-    </li>
-    <li>
-        <a href="https://github.com/softuni" target="_blank" class="icon-btn">
-            <span class="fa fa-github"></span>
-        </a>
-    </li>
-    <li>
-        <a href="https://www.instagram.com/softuni.bg/" target="_blank" class="icon-btn">
-            <span class="fa fa-instagram"></span>
-        </a>
-    </li>
-</ul>
-</nav>
+    <nav>
+        <ul class="social">
+            <li>
+                <a href="https://www.facebook.com/SoftwareUniversity" target="_blank" class="icon-btn">
+                    <span class="fa fa-facebook"></span>
+                </a>
+            </li>
+            <li>
+                <a href="https://twitter.com/softunibg" target="_blank" class="icon-btn">
+                    <span class="fa fa-twitter"></span>
+                </a>
+            </li>
+            <li>
+                <a href="https://plus.google.com/+SoftuniBg" target="_blank" class="icon-btn">
+                    <span class="fa fa-google-plus"></span>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/user/softwareuniversity" target="_blank" class="icon-btn">
+                    <span class="fa fa-youtube-play"></span>
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/softuni" target="_blank" class="icon-btn">
+                    <span class="fa fa-github"></span>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/softuni.bg/" target="_blank" class="icon-btn">
+                    <span class="fa fa-instagram"></span>
+                </a>
+            </li>
+        </ul>
+    </nav>
 </footer>
 
 
