--- a/test-yourself.html
+++ b/test-yourself.html
@@ -20,7 +20,7 @@
         </ul>
     </nav>
     <section class="questionary">
-        <p>Отговори на следващите въпроси и разбери точно какъв типичен програмист си ти.</p>
+        <h2>Отговори на следващите въпроси и разбери точно какъв типичен програмист си ти.</h2>
         <div class="questions-container">
             <div class="question-1 question-box">
                 <div class="question">Колко програмни езика знаеш?</div>
@@ -96,39 +96,40 @@
     </section>
 </main>
 <footer>
-    <p>Свържете се с нас</p><nav><ul class="social">
-    <li>
-        <a href="https://www.facebook.com/SoftwareUniversity" target="_blank" class="icon-btn">
-            <span class="fa fa-facebook"></span>
-        </a>
-    </li>
-    <li>
-        <a href="https://twitter.com/softunibg" target="_blank" class="icon-btn">
-            <span class="fa fa-twitter"></span>
-        </a>
-    </li>
-    <li>
-        <a href="https://plus.google.com/+SoftuniBg" target="_blank" class="icon-btn">
-            <span class="fa fa-google-plus"></span>
-        </a>
-    </li>
-    <li>
-        <a href="https://www.youtube.com/user/softwareuniversity" target="_blank" class="icon-btn">
-            <span class="fa fa-youtube-play"></span>
-        </a>
-    </li>
-    <li>
-        <a href="https://github.com/softuni" target="_blank" class="icon-btn">
-            <span class="fa fa-github"></span>
-        </a>
-    </li>
-    <li>
-        <a href="https://www.instagram.com/softuni.bg/" target="_blank" class="icon-btn">
-            <span class="fa fa-instagram"></span>
-        </a>
-    </li>
-</ul>
-</nav>
+    <nav>
+        <ul class="social">
+            <li>
+                <a href="https://www.facebook.com/SoftwareUniversity" target="_blank" class="icon-btn">
+                    <span class="fa fa-facebook"></span>
+                </a>
+            </li>
+            <li>
+                <a href="https://twitter.com/softunibg" target="_blank" class="icon-btn">
+                    <span class="fa fa-twitter"></span>
+                </a>
+            </li>
+            <li>
+                <a href="https://plus.google.com/+SoftuniBg" target="_blank" class="icon-btn">
+                    <span class="fa fa-google-plus"></span>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/user/softwareuniversity" target="_blank" class="icon-btn">
+                    <span class="fa fa-youtube-play"></span>
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/softuni" target="_blank" class="icon-btn">
+                    <span class="fa fa-github"></span>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/softuni.bg/" target="_blank" class="icon-btn">
+                    <span class="fa fa-instagram"></span>
+                </a>
+            </li>
+        </ul>
+    </nav>
 </footer>
 
 
