--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" type="text/css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
     <link type="text/css" rel="stylesheet" href="style.css">
-    <!--<script rel="script" src="js/slideshow.js"></script>-->
-    <!--<script src="js/carousel.js"></script>-->
+    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
 
 </head>
 <body>
@@ -22,130 +22,129 @@
         </ul>
     </nav>
     <section class="welcome">
-        <img src="img/Software-University-Logo-blue-horizontal.png">
+        <a href="https://softuni.bg/"><img src="img/Software-University-Logo-blue-horizontal.png"></a>
         <h1>добре дошли в softuni</h1>
         <h3>университетът за типични програмисти</h3>
     </section>
-    <div class="slider-for">
-
-    </div>
 
 
     <div class="fuck-carousel">
         <section class="typical-programmers">
             <h2>типични програмисти</h2>
         </section>
-        <section class="container">
-            <div id="carousel">
-                <figure></figure>
-                <figure></figure>
-                <figure></figure>
-                <figure></figure>
-                <figure></figure>
-                <figure></figure>
-                <figure></figure>
-                <figure></figure>
-                <figure></figure>
+        <div class="container">
+            <div class="slider-images">
+                <div><img src="img/svetlin_nakov-e1355764014661.jpg" alt="###"></div>
+                <div><img src="img/15966097_653101661563137_9021394244376670375_n.jpg" alt="###"></div>
+                <div><img src="img/16002987_654907051382598_3282053423106411984_n.jpg" alt="###"></div>
+                <div><img src="img/16174752_655896107950359_3300504296755915136_n.jpg" alt="###"></div>
+                <div><img src="img/16195675_658372847702685_5282484527812415002_n.jpg" alt="###"></div>
             </div>
-            <div id="options">
-                <p id="navigation">
-                    <button id="previous" data-increment="-1"><i class="fa fa-arrow-left" aria-hidden="true"></i></button>
-                    <button id="next" data-increment="1"><i class="fa fa-arrow-right" aria-hidden="true"></i></button>
-                </p>
-            </div>
-        </section>
+            <!--<div id="carousel">-->
+                <!--<figure></figure>-->
+                <!--<figure></figure>-->
+                <!--<figure></figure>-->
+                <!--<figure></figure>-->
+                <!--<figure></figure>-->
+                <!--<figure></figure>-->
+                <!--<figure></figure>-->
+                <!--<figure></figure>-->
+                <!--<figure></figure>-->
+            <!--</div>-->
+            <!--<div id="options">-->
+                <!--<p id="navigation">-->
+                    <!--<button id="previous" data-increment="-1"><i class="fa fa-arrow-left" aria-hidden="true"></i></button>-->
+                    <!--<button id="next" data-increment="1"><i class="fa fa-arrow-right" aria-hidden="true"></i></button>-->
+                <!--</p>-->
+            <!--</div>-->
+        </div>
 
-        <script src="js/utils.js"></script>
-        <script>
-            var init = function() {
-                var carousel = document.getElementById('carousel'),
-                    navButtons = document.querySelectorAll('#navigation button'),
-                    panelCount = carousel.children.length,
-                    transformProp = Modernizr.prefixed('transform'),
-                    theta = 0,
 
-                    onNavButtonClick = function( event ){
-                        var increment = parseInt( event.target.getAttribute('data-increment') );
-                        theta += ( 360 / panelCount ) * increment * -1;
-                        carousel.style[ transformProp ] = 'translateZ( -288px ) rotateY(' + theta + 'deg)';
-                    };
-
-                for (var i=0; i < 2; i++) {
-                    navButtons[i].addEventListener( 'click', onNavButtonClick, false);
-                }
-
-            };
-
-            window.addEventListener( 'DOMContentLoaded', init, false);
-        </script>
     </div>
     <section class="testim">
-        <h1>Няколко думи от наши студенти</h1>
-        <section class="testimonials">
+        <h2>Няколко думи от наши студенти</h2>
+        <div class="testimonials">
             <article class="left-testimonial">
-                <img src="img/aristotle.jpg"><p>На толкова много неща се научих от Софтуни, че не мога да ги изброя всичките.
+                <img src="img/aristotle.jpg" alt="Oooops!"><p>На толкова много неща се научих от Софтуни, че не мога да ги изброя всичките.
             Научиха ме как да кодя, как да се ровя из интернета. Също така ме научиха, че не всичко, което прочетеш в Интернет, е истина!
             </p>
                 <p class="testimonial-name">-Аристотел</p>
             </article>
             <article class="right-testimonial">
-                <img src="img/newton.jpg"><p>Добре, че беше Софтуни, че иначе нямаше да има закони на Нютон! Бяха ни дали поредното огромно домашно
+                <img src="img/newton.jpg" alt="Oooops!"><p>Добре, че беше Софтуни, че иначе нямаше да има закони на Нютон! Бяха ни дали поредното огромно домашно
                 по WebBasics курса, но за първи път от месеци имаше хубаво време. За това реших да изляза, да седна под едно дърво и да покодя малко.
                 И точно тогава ябълка ме халоса по главата. Дължа всичко, което съм на Софтуни.
             </p>
                 <p class="testimonial-name">-Исак Нютон</p>
             </article>
             <article class="left-testimonial">
-                <img src="img/turing.jpg"><p>Само благодарение на знанията, които придобих в Софтуни, успях да направя машината, с която
+                <img src="img/turing.jpg" alt="Oooops!"><p>Само благодарение на знанията, които придобих в Софтуни, успях да направя машината, с която
                 разказахме играта на германците. Ако го нямаше Developing Fundamentals курса, сега щяхме да спрехваме зидойча по цял ден.
             </p>
                 <p class="testimonial-name">-Алън Тюринг</p>
             </article>
             <article class="right-testimonial">
-                <img src="img/trump.jpg"><p>Значи, ако не беше Светлинчо да ме научи как да инспектирам страниците в интернет и да се гавря с кода им,
+                <img src="img/trump.jpg" alt="Oooops!"><p>Значи, ако не беше Светлинчо да ме научи как да инспектирам страниците в интернет и да се гавря с кода им,
                 никога нямаше да успея да стана президент на САЩ. Точно по такъв начин аз успях да манипулирам резултатите от изборите, а когато се
                 усетиха какво съм направил, ги беше срам да си признаят как съм ги заблудил. АМЕРИКА - ФЪК ЙЕА!
             </p>
                 <p class="testimonial-name">-Доланд Тръмп</p>
             </article>
-        </section>
+        </div>
     </section>
 </main>
 <footer>
-    <p>Свържете се с нас</p><nav><ul class="social">
-    <li>
-        <a href="https://www.facebook.com/SoftwareUniversity" target="_blank" class="icon-btn">
-            <span class="fa fa-facebook"></span>
-        </a>
-    </li>
-    <li>
-        <a href="https://twitter.com/softunibg" target="_blank" class="icon-btn">
-            <span class="fa fa-twitter"></span>
-        </a>
-    </li>
-    <li>
-        <a href="https://plus.google.com/+SoftuniBg" target="_blank" class="icon-btn">
-            <span class="fa fa-google-plus"></span>
-        </a>
-    </li>
-    <li>
-        <a href="https://www.youtube.com/user/softwareuniversity" target="_blank" class="icon-btn">
-            <span class="fa fa-youtube-play"></span>
-        </a>
-    </li>
-    <li>
-        <a href="https://github.com/softuni" target="_blank" class="icon-btn">
-            <span class="fa fa-github"></span>
-        </a>
-    </li>
-    <li>
-        <a href="https://www.instagram.com/softuni.bg/" target="_blank" class="icon-btn">
-            <span class="fa fa-instagram"></span>
-        </a>
-    </li>
-</ul>
+    <nav>
+        <ul class="social">
+            <li>
+                <a href="https://www.facebook.com/SoftwareUniversity" target="_blank" class="icon-btn">
+                    <span class="fa fa-facebook"></span>
+                </a>
+            </li>
+            <li>
+                <a href="https://twitter.com/softunibg" target="_blank" class="icon-btn">
+                    <span class="fa fa-twitter"></span>
+                </a>
+            </li>
+            <li>
+                <a href="https://plus.google.com/+SoftuniBg" target="_blank" class="icon-btn">
+                    <span class="fa fa-google-plus"></span>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/user/softwareuniversity" target="_blank" class="icon-btn">
+                    <span class="fa fa-youtube-play"></span>
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/softuni" target="_blank" class="icon-btn">
+                    <span class="fa fa-github"></span>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/softuni.bg/" target="_blank" class="icon-btn">
+                    <span class="fa fa-instagram"></span>
+                </a>
+            </li>
+        </ul>
+    </nav>
 </nav>
 </footer>
-
+<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script type="text/javascript" src="slick/slick.min.js"></script>
+<script type="text/javascript">$(document).ready(function(){
+$('.slider-images').slick({
+    arrows: false,
+    dots: true,
+    autoplay: true,
+    adaptiveHeight: true,
+    mobileFirst: true,
+    pauseOnHover: true,
+    swipe: true,
+    swipeToSlide: true
+//    centerMode: true
+});
+});</script>
 </body>
 </html>
