--- a/videos.html
+++ b/videos.html
@@ -19,56 +19,50 @@
         </ul>
     </nav>
     <section class="video-player-box">
-        <iframe src="https://www.youtube.com/embed/ZTwCtQIEswM" frameborder="0" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/ZTwCtQIEswM"  allowfullscreen></iframe>
 
-        <iframe src="https://www.youtube.com/embed/fT6C5O4AOsQ" frameborder="0" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/fT6C5O4AOsQ"  allowfullscreen></iframe>
 
-        <iframe src="https://www.youtube.com/embed/2ZdztpCThaA" frameborder="0" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/2ZdztpCThaA"  allowfullscreen></iframe>
 
-        <iframe src="https://www.youtube.com/embed/K7Hn1rPQouU" frameborder="0" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/K7Hn1rPQouU"  allowfullscreen></iframe>
     </section>
 </main>
 <footer>
-    <p>Свържете се с нас</p><nav><ul class="social">
-    <li>
-        <a href="https://www.facebook.com/SoftwareUniversity" target="_blank" class="icon-btn">
-            <span class="fa fa-facebook"></span>
-        </a>
-    </li>
-    <li>
-        <a href="https://twitter.com/softunibg" target="_blank" class="icon-btn">
-            <span class="fa fa-twitter"></span>
-        </a>
-    </li>
-    <li>
-        <a href="https://plus.google.com/+SoftuniBg" target="_blank" class="icon-btn">
-            <span class="fa fa-google-plus"></span>
-        </a>
-    </li>
-    <li>
-        <a href="https://www.youtube.com/user/softwareuniversity" target="_blank" class="icon-btn">
-            <span class="fa fa-youtube-play"></span>
-        </a>
-    </li>
-    <li>
-        <a href="https://github.com/softuni" target="_blank" class="icon-btn">
-            <span class="fa fa-github"></span>
-        </a>
-    </li>
-    <li>
-        <a href="https://www.instagram.com/softuni.bg/" target="_blank" class="icon-btn">
-            <span class="fa fa-instagram"></span>
-        </a>
-    </li>
-</ul>
-</nav>
+    <nav>
+        <ul class="social">
+            <li>
+                <a href="https://www.facebook.com/SoftwareUniversity" target="_blank" class="icon-btn">
+                    <span class="fa fa-facebook"></span>
+                </a>
+            </li>
+            <li>
+                <a href="https://twitter.com/softunibg" target="_blank" class="icon-btn">
+                    <span class="fa fa-twitter"></span>
+                </a>
+            </li>
+            <li>
+                <a href="https://plus.google.com/+SoftuniBg" target="_blank" class="icon-btn">
+                    <span class="fa fa-google-plus"></span>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/user/softwareuniversity" target="_blank" class="icon-btn">
+                    <span class="fa fa-youtube-play"></span>
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/softuni" target="_blank" class="icon-btn">
+                    <span class="fa fa-github"></span>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/softuni.bg/" target="_blank" class="icon-btn">
+                    <span class="fa fa-instagram"></span>
+                </a>
+            </li>
+        </ul>
+    </nav>
 </footer>
-
-
-
-
-
-</script>
-
 </body>
 </html>
