Image tags fixes.

--- a/images.html
+++ b/images.html
@@ -22,15 +22,15 @@
     <section class="images-section">
         <h2>Типичните програмисти</h2>
         <div class="images-container">
-            <article><img src="img/15966097_653101661563137_9021394244376670375_n.jpg"></article>
-            <article><img src="img/16105640_653240314882605_7080539256440944534_n.jpg"></article>
-            <article><img src="img/16105876_655574851315818_2242256575756342705_n.jpg"></article>
-            <article><img src="img/16195675_658372847702685_5282484527812415002_n.jpg"></article>
-            <article><img src="img/16002987_654907051382598_3282053423106411984_n.jpg"></article>
-            <article><img src="img/16114037_655380288001941_48838798950303350_n.jpg"></article>
-            <article><img src="img/16174752_655896107950359_3300504296755915136_n.jpg"></article>
-            <article><img src="img/16298648_662936110579692_1112081521719174362_n.jpg"></article>
-            <article><img src="img/16299449_659971497542820_4033603688312240238_n.jpg"></article>
+            <article><img src="img/15966097_653101661563137_9021394244376670375_n.jpg" alt="Oops!"></article>
+            <article><img src="img/16105640_653240314882605_7080539256440944534_n.jpg" alt="Oops!"></article>
+            <article><img src="img/16105876_655574851315818_2242256575756342705_n.jpg" alt="Oops!"></article>
+            <article><img src="img/16195675_658372847702685_5282484527812415002_n.jpg" alt="Oops!"></article>
+            <article><img src="img/16002987_654907051382598_3282053423106411984_n.jpg" alt="Oops!"></article>
+            <article><img src="img/16114037_655380288001941_48838798950303350_n.jpg" alt="Oops!"></article>
+            <article><img src="img/16174752_655896107950359_3300504296755915136_n.jpg" alt="Oops!"></article>
+            <article><img src="img/16298648_662936110579692_1112081521719174362_n.jpg" alt="Oops!"></article>
+            <article><img src="img/16299449_659971497542820_4033603688312240238_n.jpg" alt="Oops!"></article>
         </div>
     </section>
 </main>
