--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </ul>
     </nav>
     <section class="welcome">
-        <a href="https://softuni.bg/"><img src="img/Software-University-Logo-blue-horizontal.png"></a>
+        <a href="https://softuni.bg/" alt="Ooops!"><img src="img/Software-University-Logo-blue-horizontal.png"></a>
         <h1>добре дошли в softuni</h1>
         <h3>университетът за типични програмисти</h3>
     </section>
@@ -128,7 +128,6 @@
             </li>
         </ul>
     </nav>
-</nav>
 </footer>
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
