--- a/test-yourself.html
+++ b/test-yourself.html
@@ -31,7 +31,7 @@
             </div>
             <div class="result-1 result" id="noob">
                 <div class="result-text">Честито! Ти не си програмист!</div>
-                <img src="img/headerlogo.jpg">
+                <img src="img/headerlogo.jpg" alt="Ooops!">
             </div>
             <div class="question-2 question-box">
                 <div class="question">Мъж ли си или жена?</div>
@@ -49,7 +49,7 @@
             </div>
             <div class="result-2 result">
                 <div class="result-text">Здрасти Наков, как сме?</div>
-                <img src="img/svetlin_nakov-e1355764014661.jpg">
+                <img src="img/svetlin_nakov-e1355764014661.jpg" alt="Ooops!">
             </div>
             <div class="question-4 question-box">
                 <div class="question">Работиш ли в Softuni?</div>
@@ -60,7 +60,7 @@
             </div>
             <div class="result-3 result">
                 <div class="result-text">Ти си някакъв рандом бай хуй. От къде ми намери сайта?</div>
-                <img src="img/randomdude.jpg">
+                <img src="img/randomdude.jpg" alt="Ooops!">
             </div>
             <div class="question-5 question-box">
                 <div class="question">Играеш ли билярд по цял ден?</div>
@@ -71,11 +71,11 @@
             </div>
             <div class="result-4 result">
                 <div class="result-text">Здрасти Royal. Fuck "Fury", right?</div>
-                <img src="img/royal.jpg">
+                <img src="img/royal.jpg" alt="Ooops!">
             </div>
             <div class="result-5 result">
                 <div class="result-text">Здрасти Тео. Пак сте забравили sli.do-то!</div>
-                <img src="img/slido.png">
+                <img src="img/slido.png" alt="Ooops!">
             </div>
             <div class="question-6 question-box">
                 <div class="question">Сива ли ти е косата?</div>
@@ -86,11 +86,11 @@
             </div>
             <div class="result-6 result">
                 <div class="result-text">Здрасти Мери. Хареса ли ти авокадото?</div>
-                <img src="img/meri.jpg">
+                <img src="img/meri.jpg" alt="Ooops!">
             </div>
             <div class="result-7 result">
                 <div class="result-text">ASL PLS?Btw това съм аз на снимката долу 100%</div>
-                <img src="img/aslpls.jpg">
+                <img src="img/aslpls.jpg" alt="Ooops!">
             </div>
         </div>
     </section>
