--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </ul>
     </nav>
     <section class="welcome">
-        <a href="https://softuni.bg/" alt="Ooops!"><img src="img/Software-University-Logo-blue-horizontal.png"></a>
+        <a href="https://softuni.bg/" ><img src="img/Software-University-Logo-blue-horizontal.png" alt="Ooops!"></a>
         <h1>добре дошли в softuni</h1>
         <h3>университетът за типични програмисти</h3>
     </section>
