--- a/videos.html
+++ b/videos.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
     <link type="text/css" rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="video-body">
 <main class="page-main">
     <nav class="header-nav">
         <ul class="header-ul videos-page">
@@ -28,7 +28,7 @@
         <iframe src="https://www.youtube.com/embed/K7Hn1rPQouU"  allowfullscreen></iframe>
     </section>
 </main>
-<footer>
+<footer class="video-footer">
     <nav>
         <ul class="social">
             <li>
